updated server.js to use http

--- a/package.json
+++ b/package.json
@@ -1,14 +1,24 @@
 {
-  "name": "lesson2",
+  "name": "myservice",
   "version": "1.0.0",
-  "description": "",
+  "description": "example for Addison-Wesley Docer Orchestration video",
   "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
-  }
+    "http": "0.0.0"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jffalcao/myservice.git"
+  },
+  "author": "Jose Fernando Falcao",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/jffalcao/myservice/issues"
+  },
+  "homepage": "https://github.com/jffalcao/myservice#readme"
 }
